--- a/TrakHound-DataServer.csproj
+++ b/TrakHound-DataServer.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A08323E8-AEE6-4E77-A014-567DEF401D4B}</ProjectGuid>
+    <ProjectGuid>{4B8C5608-2E42-4B9D-B019-D6B50D33093B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TrakHound.Squirrel</RootNamespace>
-    <AssemblyName>Squirrel</AssemblyName>
+    <RootNamespace>TrakHound.DataServer</RootNamespace>
+    <AssemblyName>TrakHound-DataServer</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -39,20 +37,16 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MTConnect-NET, Version=2.0.0.2922, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\MTConnect.NET.2.0.0.2922\lib\net40\MTConnect-NET.dll</HintPath>
+    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\..\TrakHound-Sniff\packages\MySql.Data.6.9.9\lib\net40\MySql.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>packages\Newtonsoft.Json.9.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>packages\NLog.4.4.0\lib\net40\NLog.dll</HintPath>
+      <HintPath>..\..\TrakHound-Sniff\packages\Newtonsoft.Json.9.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\RestSharp.105.2.3\lib\net4\RestSharp.dll</HintPath>
+      <HintPath>..\..\TrakHound-Sniff\packages\RestSharp.105.2.3\lib\net4\RestSharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -64,21 +58,18 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml" />
+    <Reference Include="TrakHound-API, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\TrakHound-API.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Buffer.cs" />
     <Compile Include="Configuration.cs" />
-    <Compile Include="ContainerDefinition.cs" />
-    <Compile Include="ContainerType.cs" />
-    <Compile Include="DataDefinition.cs" />
-    <Compile Include="DataSample.cs" />
+    <Compile Include="Log.cs" />
+    <Compile Include="Sql\MySqlConfiguration.cs" />
+    <Compile Include="Sql\MySqlQueue.cs" />
+    <Compile Include="Sql\SqlQueue.cs" />
     <Compile Include="DataServer.cs" />
-    <Compile Include="DataType.cs" />
-    <Compile Include="DataTypes.cs" />
-    <Compile Include="Delegates.cs" />
-    <Compile Include="Device.cs" />
-    <Compile Include="Server.cs" />
-    <Compile Include="IDefinition.cs" />
     <Compile Include="Service.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -87,19 +78,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StreamConnection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="NLog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Configuration-Example.xml">
+    <None Include="packages.config" />
+    <None Include="server.conf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
