--- a/src/TrakHound-DataServer.csproj
+++ b/src/TrakHound-DataServer.csproj
@@ -45,12 +45,18 @@
       <HintPath>..\..\TrakHound-Sniff\packages\Newtonsoft.Json.9.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>packages\NLog.4.4.1\lib\net40\NLog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\TrakHound-Sniff\packages\RestSharp.105.2.3\lib\net4\RestSharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -65,11 +71,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.cs" />
-    <Compile Include="Log.cs" />
+    <Compile Include="Data\IModule.cs" />
+    <Compile Include="Modules\Samples.cs" />
+    <Compile Include="Data\DataProcessor.cs" />
+    <Compile Include="Rest\RestServer.cs" />
     <Compile Include="Sql\MySqlConfiguration.cs" />
     <Compile Include="Sql\MySqlQueue.cs" />
     <Compile Include="Sql\SqlQueue.cs" />
-    <Compile Include="DataServer.cs" />
+    <Compile Include="Streaming\StreamingServer.cs" />
     <Compile Include="Service.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -78,14 +87,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StreamConnection.cs" />
+    <Compile Include="Streaming\StreamConnection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="NLOG.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
-    <None Include="server.conf">
+    <None Include="server.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
