--- a/src/packages.config
+++ b/src/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="MySql.Data" version="6.9.9" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net40" />
+  <package id="NLog" version="4.4.1" targetFramework="net40" />
   <package id="RestSharp" version="105.2.3" targetFramework="net40" />
 </packages>
