Updated naming and usage

--- a/src/DataServer/server.config
+++ b/src/DataServer/server.config
@@ -1,30 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <DataServer>
-  
-  <!--Set Ports for Server Listening-->
-  <RestPort>80</RestPort>
-  <StreamingPort>8472</StreamingPort>
-  
-  <!--Set URL Prefixes for REST server-->
-  <Prefixes>
-    <Prefix>http://localhost/</Prefix>
-  </Prefixes>
+
+  <!--REST Server Configuration-->
+  <!--<Rest port="80">
+
+    --><!--Set URL Prefixes to listen on--><!--
+    <Prefixes>
+      <Prefix>http://localhost/</Prefix>
+    </Prefixes>
+
+  </Rest>-->
+
+  <!--Streaming Server Configuration-->
+  <Streaming port="8472" clientTimeout="15000"/>
+  <!--<Streaming port="8472" clientTimeout="15000" authenticationUrl="http://dev.trakhound.com/api/devices"/>-->
+
 
   <!--SSL Configuration-->
-  <SslCertificatePath>C:\Users\Patrick\Documents\test-ssl-certificate\localhost.pfx</SslCertificatePath>
-  <SslCertificatePassword>snaps</SslCertificatePassword>
+  <!--<SslCertificatePath>C:\Users\Patrick\Documents\test-ssl-certificate\localhost.pfx</SslCertificatePath>
+  <SslCertificatePassword>snaps</SslCertificatePassword>-->
 
-  <AuthenticationUrl>http://dev.trakhound.com/api/devices</AuthenticationUrl>
-  
-  <!--Client Connection Inactivity Timeout (milliseconds)-->
-  <ClientConnectionTimeout>15000</ClientConnectionTimeout>
   
   <!--Allowed Client Endpoints that this server will accept connections from-->
-  <EndPoints>
-    <EndPoint>127.0.0.1</EndPoint> 
-  </EndPoints>
-  
+  <!--<EndPoints>
+    <Allow>
+      <EndPoint>192.168.1.198</EndPoint>
+    </Allow>
+    --><!--<Deny>
+      <EndPoint>192.168.1.198</EndPoint>
+    </Deny>--><!--
+  </EndPoints>-->
+    
   <!--Configure the MySQL database connection-->
-  <DatabaseConfigurationPath>C:\Users\Patrick\Documents\TrakHound\Source-Code\TrakHound-DataServer\src\Modules\Sql\mod-db-mysql\bin\Debug\mysql.config</DatabaseConfigurationPath>
+  <DatabaseConfigurationPath>mysql.config</DatabaseConfigurationPath>
 
 </DataServer>
