--- a/src/DataServer/server.config
+++ b/src/DataServer/server.config
@@ -2,36 +2,36 @@
 <DataServer>
 
   <!--REST Server Configuration-->
-  <!--<Rest port="80">
+  <Rest port="80">
 
-    --><!--Set URL Prefixes to listen on--><!--
+    <!--Set URL Prefixes to listen on-->
     <Prefixes>
       <Prefix>http://localhost/</Prefix>
     </Prefixes>
 
-  </Rest>-->
+  </Rest>
 
   <!--Streaming Server Configuration-->
-  <Streaming port="8472" clientTimeout="15000"/>
-  <!--<Streaming port="8472" clientTimeout="15000" authenticationUrl="http://dev.trakhound.com/api/devices"/>-->
+  <Streaming port="8472" clientTimeout="15000" authenticationUrl="https://devices.trakhound.com"/>
 
-
-  <!--SSL Configuration-->
-  <!--<SslCertificatePath>C:\Users\Patrick\Documents\test-ssl-certificate\localhost.pfx</SslCertificatePath>
+  <!--SSL Configuration--><!--
+  <SslCertificatePath>C:\Users\Patrick\Documents\TrakHound\Documents\Comodo SSL\SSL Files\trakhound.pfx</SslCertificatePath>
   <SslCertificatePassword>snaps</SslCertificatePassword>-->
 
   
-  <!--Allowed Client Endpoints that this server will accept connections from-->
+  <!--Client Endpoints that this server will accept or deny connections from-->
   <!--<EndPoints>
     <Allow>
-      <EndPoint>192.168.1.198</EndPoint>
+      <EndPoint>192.168.1.10</EndPoint>
+      <EndPoint>192.168.1.11</EndPoint>
+      <EndPoint>192.168.1.13</EndPoint>
     </Allow>
-    --><!--<Deny>
-      <EndPoint>192.168.1.198</EndPoint>
-    </Deny>--><!--
+    <Deny>
+      <EndPoint>192.168.1.12</EndPoint>
+    </Deny>
   </EndPoints>-->
     
-  <!--Configure the MySQL database connection-->
+  <!--Define the path to the database configuration file-->
   <DatabaseConfigurationPath>mysql.config</DatabaseConfigurationPath>
 
 </DataServer>
