Updated project properties

--- a/src/Modules/Sql/mod-db-mysql/mod-db-mysql.csproj
+++ b/src/Modules/Sql/mod-db-mysql/mod-db-mysql.csproj
@@ -67,6 +67,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="create-getinstance.sql" />
     <Content Include="create-tables.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
