--- a/src/Modules/Sql/mod-db-sql/mod-db-sql.csproj
+++ b/src/Modules/Sql/mod-db-sql/mod-db-sql.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="create-getinstance.sql" />
     <Content Include="create-tables.sql" />
   </ItemGroup>
   <ItemGroup>
