--- a/src/DataServer/server.config
+++ b/src/DataServer/server.config
@@ -12,7 +12,7 @@
   </Rest>
 
   <!--Streaming Server Configuration-->
-  <Streaming port="8472" clientTimeout="15000" authenticationUrl="https://devices.trakhound.com"/>
+  <Streaming clientTimeout="15000"/>
 
   <!--SSL Configuration--><!--
   <SslCertificatePath>C:\Users\Patrick\Documents\TrakHound\Documents\Comodo SSL\SSL Files\trakhound.pfx</SslCertificatePath>
