--- a/src/DataServer/TrakHound-DataServer.csproj
+++ b/src/DataServer/TrakHound-DataServer.csproj
@@ -68,7 +68,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml" />
-    <Reference Include="TrakHound-Api, Version=1.0.0.9125, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="TrakHound-Api, Version=1.3.0.37671, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\TrakHound-Api\src\bin\Release\TrakHound-Api.dll</HintPath>
     </Reference>
@@ -76,9 +76,8 @@
   <ItemGroup>
     <Compile Include="Configuration.cs" />
     <Compile Include="EndPointRange.cs" />
+    <Compile Include="Json\StreamData.cs" />
     <Compile Include="Rest\RestConfiguration.cs" />
-    <None Include="Rest\IModule.cs" />
-    <Compile Include="Json.cs" />
     <Compile Include="Rest\Modules.cs" />
     <Compile Include="Rest\RestServer.cs" />
     <None Include="events.config">
