Updated server.config file to apply new Configuration class updates

--- a/src/DataServer/server.config
+++ b/src/DataServer/server.config
@@ -1,18 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<DataServer>
-
-  <!--REST Server Configuration-->
-  <Rest port="80">
-
-    <!--Set URL Prefixes to listen on-->
-    <Prefixes>
-      <Prefix>http://localhost/</Prefix>
-    </Prefixes>
-
-  </Rest>
-
-  <!--Streaming Server Configuration-->
-  <Streaming clientTimeout="15000"/>
+<DataServer port="8472" clientTimeout="15000">
 
   <!--SSL Configuration--><!--
   <SslCertificatePath>C:\Users\Patrick\Documents\TrakHound\Documents\Comodo SSL\SSL Files\trakhound.pfx</SslCertificatePath>
