Removed StreamingConfiguration class

--- a/src/DataServer/NLOG.config
+++ b/src/DataServer/NLOG.config
@@ -2,7 +2,7 @@
   <targets>
     
     <!--Errors-->
-    <target name="errors" xsi:type="File" fileName="server-error.log" />
+    <target name="errors" xsi:type="File" fileName="error.log" />
     
     <!--Console-->
     <target xsi:type="Console"
