--- a/src/DataServer/TrakHound-DataServer.csproj
+++ b/src/DataServer/TrakHound-DataServer.csproj
@@ -45,6 +45,10 @@
       <HintPath>..\packages\NLog.4.4.3\lib\net40\NLog.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.105.2.3\lib\net4\RestSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition">
       <Private>True</Private>
@@ -64,9 +68,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml" />
-    <Reference Include="TrakHound-Api, Version=1.3.0.37671, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\TrakHound-Api\src\bin\Release\TrakHound-Api.dll</HintPath>
+    <Reference Include="TrakHound-Api, Version=1.3.2.12241, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\TrakHound-Api.1.3.2.12241\lib\net40\TrakHound-Api.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
