--- a/src/Modules/mod-db-mysql/packages.config
+++ b/src/Modules/mod-db-mysql/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MySql.Data" version="6.9.9" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net40" />
   <package id="NLog" version="4.4.3" targetFramework="net40" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net40" />
+  <package id="TrakHound-Api" version="1.3.2.12241" targetFramework="net40" />
 </packages>
