--- a/src/Modules/mod-db-mysql/mod-db-mysql.csproj
+++ b/src/Modules/mod-db-mysql/mod-db-mysql.csproj
@@ -75,8 +75,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="create-getinstance.sql" />
-    <Content Include="create-tables.sql" />
+    <Content Include="mysql-create-getinstance.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="mysql-create-tables.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
