--- a/src/Modules/mod-db-sql/mod-db-sql.csproj
+++ b/src/Modules/mod-db-sql/mod-db-sql.csproj
@@ -63,8 +63,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="create-getinstance.sql" />
-    <Content Include="create-tables.sql" />
+    <Content Include="sql-create-getinstance.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="sql-create-tables.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
