Removed Messaging and uses ServiceController for reading Service status

--- a/src/DataServer/server.config
+++ b/src/DataServer/server.config
@@ -1,23 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<DataServer port="8472" clientTimeout="15000">
+<DataServer port="8472">
 
-  <!--SSL Configuration--><!--
-  <SslCertificatePath>C:\Users\Patrick\Documents\TrakHound\Documents\Comodo SSL\SSL Files\trakhound.pfx</SslCertificatePath>
-  <SslCertificatePassword>snaps</SslCertificatePassword>-->
-
-  
-  <!--Client Endpoints that this server will accept or deny connections from-->
-  <!--<EndPoints>
-    <Allow>
-      <EndPoint>192.168.1.10</EndPoint>
-      <EndPoint>192.168.1.11</EndPoint>
-      <EndPoint>192.168.1.13</EndPoint>
-    </Allow>
-    <Deny>
-      <EndPoint>192.168.1.12</EndPoint>
-    </Deny>
-  </EndPoints>-->
-    
   <!--Define the path to the database configuration file-->
   <DatabaseConfigurationPath>mysql.config</DatabaseConfigurationPath>
 
