--- a/src/DataServer/NLOG.config
+++ b/src/DataServer/NLOG.config
@@ -3,6 +3,9 @@
     
     <!--Errors-->
     <target name="errors" xsi:type="File" fileName="error.log" />
+
+    <!--Server Health Status-->
+    <target name="health-status" xsi:type="File" fileName="health.log" />
     
     <!--Console-->
     <target xsi:type="Console"
@@ -12,7 +15,8 @@
     
   </targets>
   <rules>
+    <logger name="health-log" minlevel="Info" writeTo="health-status" />
     <logger name="*" minlevel="Info" writeTo="console" />
-    <logger name="*" minlevel="Warn" writeTo="errors" />
+    <logger name="*" minlevel="Error" writeTo="errors" />
   </rules>
 </nlog>
