--- a/src/DataServer/server.config
+++ b/src/DataServer/server.config
@@ -2,6 +2,6 @@
 <DataServer port="8472">
 
   <!--Define the path to the database configuration file-->
-  <DatabaseConfigurationPath>mysql.config</DatabaseConfigurationPath>
+  <DatabaseConfigurationPath>sql.config</DatabaseConfigurationPath>
 
 </DataServer>
