--- a/src/DataServer/TrakHound-DataServer.csproj
+++ b/src/DataServer/TrakHound-DataServer.csproj
@@ -101,7 +101,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
-    <None Include="server.config">
+    <None Include="server.config.default">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </None>
