--- a/src/DataServer/packages.config
+++ b/src/DataServer/packages.config
@@ -3,4 +3,5 @@
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net40" />
   <package id="NLog" version="4.4.6" targetFramework="net40" />
   <package id="RestSharp" version="105.2.3" targetFramework="net40" />
+  <package id="TrakHound-Api" version="1.10.0.26733" targetFramework="net40" />
 </packages>
