--- a/src/DataServer/NLOG.config
+++ b/src/DataServer/NLOG.config
@@ -16,7 +16,7 @@
   </targets>
   <rules>
     <logger name="health-log" minlevel="Info" writeTo="health-status" />
-    <logger name="*" minlevel="Info" writeTo="console" />
+    <logger name="*" minlevel="Debug" writeTo="console" />
     <logger name="*" minlevel="Error" writeTo="errors" />
   </rules>
 </nlog>
